--- a/rust/pact_consumer/Cargo.toml
+++ b/rust/pact_consumer/Cargo.toml
@@ -23,9 +23,9 @@ tls = ["pact_mock_server/tls"]
 colour = ["dep:yansi"]
 
 [dependencies]
-anyhow = "1.0.98"
-async-trait = "0.1.88"
-bytes = "1.10.1"
+anyhow = "1.0.100"
+async-trait = "0.1.89"
+bytes = "1.11.0"
 futures = "0.3.31"
 itertools = "0.14.0"
 lazy_static = "1.5.0"
@@ -33,26 +33,26 @@ maplit = "1.0.2"
 pact_matching = { version = "~2.0.2", path = "../pact_matching", default-features = false }
 pact_mock_server = { version = "~2.1.3", default-features = false }
 pact_models = { version = "~1.3.7", default-features = false }
-pact-plugin-driver = { version = "~0.7.4", optional = true, default-features = false }
-regex = "1.11.1"
-serde_json = "1.0.140"
+pact-plugin-driver = { version = "~0.7.5", optional = true, default-features = false }
+regex = "1.12.2"
+serde_json = "1.0.149"
 termsize = "0.1.9"
-tokio = { version = "1.45.1", features = ["full"] }
-tracing = "0.1.41"
-tracing-core = "0.1.34"
-url = "2.5.4"
-uuid = { version = "1.17.0", features = ["v4"] }
+tokio = { version = "1.49.0", features = ["full"] }
+tracing = "0.1.44"
+tracing-core = "0.1.36"
+url = "2.5.8"
+uuid = { version = "1.19.0", features = ["v4"] }
 yansi = { version = "1.0.1", optional = true }
 
 [dev-dependencies]
 quickcheck = "1.0.3"
 env_logger = "0.11.8"
 expectest = "0.12.0"
-reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
-serde = { version = "1.0.219", features = ["derive"] }
+reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "blocking", "json"] }
+serde = { version = "1.0.228", features = ["derive"] }
 rand = "0.8.5"
-tempfile = "3.20.0"
-tokio-test = "0.4.4"
-test-log = { version = "0.2.17", features = ["trace"] }
-tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log", "fmt"] }
+tempfile = "3.24.0"
+tokio-test = "0.4.5"
+test-log = { version = "0.2.19", features = ["trace"] }
+tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing-log", "fmt"] }
 pretty_assertions = "1.4.1"
