--- a/rust/pact_ffi/Cargo.toml
+++ b/rust/pact_ffi/Cargo.toml
@@ -15,18 +15,18 @@ exclude = [
 
 [dependencies]
 ansi_term = "0.12.1"
-anyhow = "1.0.86"
-bytes = "1.7.1"
-chrono = "0.4.38"
-chrono-tz = "0.9.0"
+anyhow = "1.0.100"
+bytes = "1.11.0"
+chrono = "0.4.42"
+chrono-tz = "0.10.4"
 clap = "2.34.0"
-either = "1.13.0"
-env_logger = "0.11.5"
-futures = "0.3.30"
-itertools = "0.13.0"
+either = "1.15.0"
+env_logger = "0.11.8"
+futures = "0.3.31"
+itertools = "0.14.0"
 lazy_static = "1.5.0"
-libc = "0.2.158"
-log = "0.4.22"
+libc = "0.2.180"
+log = "0.4.29"
 maplit = "1.0.2"
 multipart-2021 = { version = "0.19.0", default-features = false, features = ["client", "mock"] }
 onig = { version = "6.5.1", default-features = false }
@@ -35,40 +35,40 @@ onig = { version = "6.5.1", default-features = false }
 pact_matching = { version = "1.2.12" }
 pact_mock_server = "~2.1.0"
 pact_models = { version = "~1.3.7" }
-pact-plugin-driver = { version = "~0.7.4" }
+pact-plugin-driver = { version = "~0.7.5" }
 pact_verifier = { version = "~1.3.2", path = "../pact_verifier" }
 panic-message = "0.3.0"
 rand = "0.8.5"
 rand_regex = "0.15.1"
-regex = "1.10.6"
+regex = "1.12.2"
 regex-syntax = "0.6.29"
-serde = { version = "1.0.209", features = ["derive"] }
-serde_json = "1.0.127"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
 serde_urlencoded = "0.7.1"
 sxd-document = "0.3.2"
 thiserror = "1.0.63"
-tokio = { version = "1.40.0", features = ["full"] }
-tokio-rustls = "0.24.1"
+tokio = { version = "1.49.0", features = ["full"] }
+tokio-rustls = "0.26.4"
 tracing = "0.1.41" # This needs to be the same version across all the libs (i.e. plugin driver)
 tracing-core = "0.1.33"  # This needs to be the same version across all the pact libs (i.e. plugin driver)
 tracing-log = "0.2.0"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log"] }
-uuid = { version = "1.10.0", features = ["v4"] }
-zeroize = "1.8.1"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing-log"] }
+uuid = { version = "1.19.0", features = ["v4"] }
+zeroize = "1.8.2"
 
 [dev-dependencies]
 expectest = "0.12.0"
 hamcrest2 = "0.3.0"
-home = "0.5.9"
-pretty_assertions = "1.4.0"
+home = "0.5.12"
+pretty_assertions = "1.4.1"
 quickcheck = "1.0.3"
-reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json", "multipart"] }
-rstest = "0.22.0"
-test-log = "0.2.16"
-tempfile = "3.12.0"
+reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "blocking", "json", "multipart"] }
+rstest = "0.26.1"
+test-log = "0.2.19"
+tempfile = "3.24.0"
 
 [lib]
 crate-type = ["cdylib", "staticlib", "rlib"]
 
 [build-dependencies]
-os_info = { version = "3.8.2", default-features = false }
+os_info = { version = "3.14.0", default-features = false }
